--- a/src/localization/CMakeLists.txt
+++ b/src/localization/CMakeLists.txt
@@ -7,18 +7,48 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
+find_package(visualization_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(interface_pkg REQUIRED)
+find_package(Eigen3 REQUIRED)
+
+add_executable(sub
+  src/localization.cpp
+)
+ament_target_dependencies(sub
+  rclcpp
+  tf2_ros
+  tf2_geometry_msgs
+  visualization_msgs
+  sensor_msgs
+  interface_pkg
+  Eigen3
+)
+
+add_executable(main
+  src/new_localization.cpp
+)
+ament_target_dependencies(main
+  rclcpp
+  tf2_ros
+  tf2_geometry_msgs
+  visualization_msgs
+  sensor_msgs
+  interface_pkg
+  Eigen3
+)
+
+install(TARGETS
+main
+sub
+DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
   set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
