--- a/src/localization/CMakeLists.txt
+++ b/src/localization/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(pcl_ros REQUIRED)
 find_package(pcl_conversions REQUIRED)
+find_package(tf2_sensor_msgs REQUIRED)
 find_package(visualization_msgs REQUIRED)
 
 add_library(localization SHARED src/icp_localization.cpp)
@@ -22,7 +23,7 @@ ament_target_dependencies(localization
   rclcpp rclcpp_components 
   sensor_msgs
   tf2_geometry_msgs
-  tf2_ros tf2
+  tf2_ros tf2 tf2_sensor_msgs
   pcl_ros pcl_conversions
   visualization_msgs
 )
