--- a/src/localization/package.xml
+++ b/src/localization/package.xml
@@ -19,6 +19,7 @@
   <depend>tf2_ros</depend>
   <depend>pcl_ros</depend>
   <depend>pcl_conversions</depend>
+  <depend>tf2_sensor_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
