--- a/src/localization/CMakeLists.txt
+++ b/src/localization/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_components REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
@@ -23,6 +24,7 @@ add_library(localization SHARED src/icp_localization.cpp)
 ament_target_dependencies(localization
   rclcpp rclcpp_components 
   sensor_msgs
+  geometry_msgs
   tf2_geometry_msgs
   tf2_ros tf2 tf2_sensor_msgs
   pcl_ros pcl_conversions
