--- a/src/localization/CMakeLists.txt
+++ b/src/localization/CMakeLists.txt
@@ -15,37 +15,17 @@ find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(tf2_sensor_msgs REQUIRED)
+find_package(tf2_eigen REQUIRED)
 find_package(pcl_ros REQUIRED)
 find_package(pcl_conversions REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(visualization_msgs REQUIRED)
 
-add_library(localization SHARED src/icp_localization.cpp)
-ament_target_dependencies(localization
-  rclcpp rclcpp_components 
-  sensor_msgs
-  geometry_msgs
-  tf2_geometry_msgs
-  tf2_ros tf2 tf2_sensor_msgs
-  pcl_ros pcl_conversions
-  visualization_msgs
-)
-
-rclcpp_components_register_node(localization PLUGIN "Localization::LocalizationNode" EXECUTABLE localization_node)
-
-ament_export_targets(export_component)
-install(TARGETS localization
-        EXPORT export_component
-        ARCHIVE DESTINATION lib
-        LIBRARY DESTINATION lib
-        RUNTIME DESTINATION bin
-)
-
 add_library(localization_2 SHARED src/icp_localization_ver2.cpp)
 ament_target_dependencies(localization_2
   rclcpp rclcpp_components 
   sensor_msgs
-  tf2 tf2_ros tf2_geometry_msgs tf2_sensor_msgs
+  tf2 tf2_ros tf2_geometry_msgs tf2_sensor_msgs tf2_eigen
   pcl_ros pcl_conversions
   Eigen3
   visualization_msgs
